# WireSentinel

./: .gitignore  Cargo.toml  README.md  deny.toml  version.json
app-registry/: Cargo.toml
app-registry/src/: discovery.rs  identity.rs  lib.rs  service.rs
core-service/: Cargo.toml
core-service/src/: anonymity.rs  anonymity_decoy.rs  anonymity_discovery.rs  anonymity_entropy.rs  anonymity_security.rs  anonymous_routing.rs  audit.rs  auth.rs  backup.rs  benchmark.rs  binary_paths.rs  cloud_backup_reporter.rs  cloud_sync.rs  cloud_telemetry_reporter.rs  cloud_usage_reporter.rs  config_store.rs  controller_agent.rs  correlation.rs  cover_traffic.rs  deps.rs  deterministic_id.rs  diagnostics.rs  domain_cache.rs  enforcement.rs  enterprise.rs  exit_failover.rs  fault_injection.rs  guardian_hybrid.rs  hot_settings.rs  kernel_route_bridge.rs  kernel_telemetry.rs  leak_detector.rs  lib.rs  log_retention.rs  logging.rs  main.rs  metrics.rs  mixnet.rs  mixnet_redirect.rs  mixnet_security.rs  (+27 more)
core-service/src/api/: anonymity_routes.rs  app_routes.rs  kernel_routes.rs  middleware.rs  mixnet_routes.rs  mod.rs  openapi.rs  proxy_routes.rs  routes.rs  settings_routes.rs  tailnet_routes.rs  tor_routes.rs  vpn_gateway_compat.rs  wiresock.rs  ws.rs
core-service/tests/: anonymity_analytics.rs  anonymity_routes.rs  anonymous_routing.rs  api_auth.rs  backup.rs  cloud_reporters.rs  cloud_sync.rs  diagnostics.rs  enforcement_backend.rs  fault_injection.rs  kernel_routes.rs  kernel_telemetry.rs  leak_detector.rs  mixnet_redirect.rs  performance.rs  privacy.rs  privacy_analytics.rs  proxy_redirect.rs  proxy_routing.rs  recovery.rs  split_tunnel.rs  sse_agent.rs  stress_harness.rs  tcp_termination_lifecycle.rs  xdr_agent.rs  ztna_agent.rs
dns/: Cargo.toml
dns/src/: failover.rs  layer.rs  lib.rs  policy.rs  provider.rs  proxy.rs
dns/src/providers/: doh.rs  doq.rs  dot.rs  mod.rs
dns/tests/: provider.rs
dpi-transforms/: Cargo.toml
dpi-transforms/src/: lib.rs  pipeline.rs
dpi-transforms/src/transform/: camouflage.rs  fake_tls.rs  fragment.rs  jitter.rs  lwo.rs  mod.rs  padding.rs
event-bus/: Cargo.toml
event-bus/src/: lib.rs
filter-lists/: Cargo.toml
filter-lists/src/: engine.rs  lib.rs  plugin.rs  scheduler.rs
filter-lists/src/providers/: easylist.rs  hosts.rs  mod.rs
plugin-runtime/: Cargo.toml
plugin-runtime/src/: lib.rs  loader.rs  manager.rs  registry.rs  traits.rs  wasm_loader.rs
plugin-runtime/tests/: runtime.rs
proxy-engine/: Cargo.toml
proxy-engine/src/: backend.rs  chain.rs  context.rs  http.rs  https.rs  lib.rs  manager.rs  socks5.rs
proxy-engine/tests/: chain_validation.rs
shared-types/: Cargo.toml
shared-types/src/: app.rs  app_tests.rs  bandwidth.rs  cloud_telemetry.rs  config.rs  debug_log.rs  dns.rs  error.rs  events.rs  filter.rs  kernel_enforcement.rs  lib.rs  multi_tenant_cloud.rs  phase10.rs  phase12.rs  phase13.rs  phase15.rs  phase16.rs  phase17.rs  phase18.rs  phase18_5.rs  phase19.rs  phase3.rs  phase4.rs  phase5.rs  plugins_anonymous_routing.rs  proxy_chains.rs  route.rs  rule.rs  traffic.rs  transport_privacy.rs  validation_release.rs  verdict.rs  vpn.rs  vpn_gateway_compat.rs  ztna.rs
split-tunnel/: Cargo.toml
split-tunnel/src/: lib.rs  resolution.rs  templates.rs
split-tunnel/tests/: policy_integration.rs
storage/: .orig.mod.rs  .orig.obfuscation.rs  .orig.vpn.rs  Cargo.toml
storage/migrations/: 001_init.sql  002_phase2.sql  002_traffic_log_extensions.sql  003_route_audit_domain_cache_wfp.sql  004_phase4.sql  004_transport_chains_obfuscation_privacy.sql  005_runtime_performance_backup.sql  006_phase6.sql  006_validation_benchmark_security.sql  007_plugins_tailnet_tor_bridges.sql  008_phase9.sql  008_proxy_chains_health.sql  009_mixnet_cover_traffic_anonymous_chains.sql  009_phase10.sql  010_kernel_ndis_telemetry.sql  011_katzenpost_loopix_anonymous_services.sql  012_tcp_handshake_proxy.sql  013_split_tunnel_templates.sql  014_app_exit_routes.sql  015_retention_upsert_keys.sql
storage/src/: lib.rs  migrate_legacy.rs  migrations.rs  pool.rs
storage/src/repos/: anonymous_chain.rs  anonymous_service.rs  app.rs  audit.rs  backup_manifest.rs  benchmark.rs  bridge.rs  chain.rs  correlation.rs  cover_traffic.rs  dns_provider.rs  domain_cache.rs  enterprise_policy.rs  filter.rs  firewall.rs  katzenpost.rs  leak.rs  logs.rs  loopix.rs  mixnet.rs  mod.rs  obfuscation.rs  performance.rs  plugin.rs  privacy_analytics.rs  privacy_snapshot.rs  proxy.rs  proxy_chain.rs  route_stats.rs  rule.rs  runtime_state.rs  security_finding.rs  settings.rs  split_template.rs  tailnet.rs  tcp_termination.rs  tor.rs  traits.rs  transport.rs  validation_result.rs  (+3 more)
storage/tests/: integration.rs  migration_repair.rs
tcp-termination/: Cargo.toml
tcp-termination/src/: engine.rs  lib.rs  platform.rs
traffic-monitor/: Cargo.toml
traffic-monitor/src/: backend.rs  etw.rs  filter.rs  handler.rs  iphlpapi.rs  lib.rs  monitor.rs  packet.rs  stub.rs  windows.rs
transport-engine/: Cargo.toml
transport-engine/src/: amnezia.rs  backend.rs  chain.rs  config_store.rs  direct.rs  factory.rs  lib.rs  mixnet.rs  process_manager.rs  proxy.rs  tls_tunnel.rs  tor.rs  wireguard.rs  ws_tunnel.rs
transport-engine/src/singbox/: bridge_torrc.rs  config.rs  mod.rs  tor_config.rs  tor_runner.rs  transport.rs
transport-engine/src/xray/: config.rs  mod.rs  transport.rs
transport-engine/tests/: chain.rs  transform_integration.rs
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/permissions/: api-base-url.toml  service-bootstrap.toml  (+1 more)
vpn-engine/: Cargo.toml
vpn-engine/src/: amnezia.rs  backend.rs  conf.rs  factory.rs  handshake_proxy.rs  lib.rs  manager.rs  materialize.rs  scm.rs  stub.rs
wfp/: Cargo.toml
wfp/src/: debug_agent.rs  engine.rs  hybrid.rs  kernel.rs  lib.rs  ndis.rs  stub.rs  userspace.rs  windivert_ndis.rs
windivert-engine/: Cargo.toml
windivert-engine/src/: capture.rs  ffi.rs  lib.rs  packet_parse.rs  redirect.rs  telemetry.rs  transform.rs
(+127 files in other folders)
