[package]
name = "event-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
