[package]
name = "traffic-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }
