[package]
name = "wfp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
proxy-engine = { workspace = true }
ndis-controller = { path = "../../WireSentinel-Ndis/controller" }
windivert-engine = { workspace = true }

[features]
default = ["signed-stack"]
signed-stack = []

[target.'cfg(windows)'.dependencies]
guardian-controller = { path = "../../WireSentinel-Kernel/usermode/controller" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Security",
    "Win32_System_Rpc",
    "Win32_System_Services",
    "Win32_UI_Shell",
] }
