[package]
name = "windivert-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[target.'cfg(windows)'.dependencies]
libloading = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
