[package]
name = "wire-sentinel-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography"] }

[lib]
name = "wire_sentinel_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wire-sentinel"
path = "src/main.rs"
